--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-validator": "^5.3.0",
     "pg": "^7.6.0",
     "pg-hstore": "^2.3.2"
   }
